--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ safe: false
 
 ### site serving configuration ###
 exclude: [CNAME, README.md, .gitignore]
-permalink: / ## disables post output
+#permalink: / ## disables post output
 timezone: null
 lsi: false
 markdown: kramdown
@@ -17,7 +17,7 @@ markdown: kramdown
 title:       "SinglePaged - Title: Edit me in _config.yml!"
 keywords:    "SinglePaged, jekyll, template, github, blog, single page"
 description: "A single-page template for Jekyll based blogs (like what you'd use on github pages!)"
-source_link: "https://github.com/t413/SinglePaged"
+source_link: "https://github.com/1984btgn.github.io"
 favicon:     #put a path like: "img/favicon.ico"
 touch_icon:  #put a path like: "img/apple-touch-icon.png"
 google_analytics_key: ## put YOUR key here to enable tracking! (blank to disable)
@@ -35,4 +35,3 @@ colors:
 
 kramdown:
   auto_ids:  false
-
