--- a/_config.yml
+++ b/_config.yml
@@ -1,33 +1,42 @@
 ---
 
-port: 4000
-host: 0.0.0.0
-safe: false
+port:         4000
+host:         0.0.0.0
+safe:         false
 
 
 ### site serving configuration ###
-exclude: [CNAME, README.md, .gitignore]
-permalink: /:title ## disables post output
-timezone: null
-lsi: false
-markdown: kramdown
+exclude:      [CNAME, README.md, .gitignore]
+permalink:    /:title ## disables post output
+timezone:     null
+lsi:          false
+markdown:     kramdown
 
 
 ### content configuration ###
-title:       "Morgan Editorial"
-keywords:    "freelance, copy, editing, academic, fiction, nonfiction"
-description: "Profressional freelance editor and story advocate"
+title:        "Morgan Editorial"
+keywords:     "freelance, copy, editing, academic, fiction, nonfiction"
+description:  "Profressional freelance editor and story advocate"
 
 
 ### template colors, used site-wide via css ###
+# colors:
+#   black:    '#111111'
+#   white:    '#f8f8f8'
+#   blue:     '#49a7e9'
+#   green:    '#9bcf2f'
+#   purple:   '#c869bf'
+#   orange:   '#fab125'
+#   turquoise: '#0fbfcf'
+
 colors:
-  black:     '#111111'
-  white:     '#f8f8f8'
-  blue:      '#49a7e9'
-  green:     '#9bcf2f'
-  purple:    '#c869bf'
-  orange:    '#fab125'
-  turquoise: '#0fbfcf'
+  black:      '#111111'
+  white:      '#f8f8f8'
+  peach:      "#ffede1"
+  indigo:     "#1f2041"
+  blue:       "#52bbc7"
+  green:      "#5ef38c"
+  orange:     "#ee6352"
 
 kramdown:
-  auto_ids:  false
+  auto_ids:   false
