--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ description:    "Profressional freelance editor and story advocate"
 
 colors:
   black:        '#111111'
-  white:        '#fefefe'
+  white:        '#ffffff'
   peach:        "#ffede1"
   indigo:       "#1f2041"
   blue:         "#52bbc7"
